--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 <head>
-
+  <!-- Adsense -->
+  <script data-ad-client="ca-pub-3259295267043111" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
